# RaSpectLoc

./: README.md
Groundtruths/: TurtlebotTourCVSSP_0_map6.txt  TurtlebotTourCVSSP_2_map6.txt
Raman_gazebo_plugin/cvssp_turtlebot_sim/: CMakeLists.txt  package.xml
Raman_gazebo_plugin/cvssp_turtlebot_sim/gazebo/: BA00.world  BA00_ign.sdf  BA00_sedar.world  BA00_sedar_raspect.world  BA00_sedar_raspect_w_turt.world  BA00_sedar_raspect_w_turt2.world  BA00_sedar_raspect_w_turt_final.world  BA00_sedar_raspect_w_turt_final_final.world  BA00_sedar_tmp.world  BA00_sedar_tmp2.world  BA00_sedar_tmp_turt.world  BA00_test_simp.world  Will_this_save.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/launch/: multi_turtlebot_in_stage.launch
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/Basic_ply_door/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/basic_ply_door_corrected/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/basic_ply_door_corrected_wider/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/basic_ply_door_smaller/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/black_door/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/black_door_clone/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/bookshelf_oak/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/bookshelf_ply_wood/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/models/metal_door/: model.config  model.sdf
Raman_gazebo_plugin/cvssp_turtlebot_sim/world/: BA00.world  BA00_world.yaml  turtlebot.inc
Raman_gazebo_plugin/logical_camera/: CMakeLists.txt  package.xml
Raman_gazebo_plugin/logical_camera/include/logical_camera/: logical_cam_filter.hh
Raman_gazebo_plugin/logical_camera/msgs/: LogicalCameraImage.msg  MaterialAndDepth.msg  Model.msg  SemanticLCScan.msg
Raman_gazebo_plugin/logical_camera/src/: logical_cam_filter.cpp  logical_camera_listener.py  logical_camera_plugin.cpp  logical_camera_plugin_listener.cpp
Raman_gazebo_plugin/logical_camera/urdf/sensors/: sensor_logical_camera.urdf.xacro
ground_truths/: TurtlebotTourCVSSP_0_cubeq_interp_poses_fodom_map6_frame_final.txt  TurtlebotTourCVSSP_1_fullcube_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_1_linp_cubeq_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_3_linp_cubeq_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_4_cubep_cubeq_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_4_linp_cubeq_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_4_quadp_cubeq_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_5_cubep_cubeq_interp_poses_fscan_map6_frame_final.txt
interp_gt_map_frame/: TurtlebotTourCVSSP_1_quadp_cubeq_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_3_cubep_cubeq_interp_poses_fscan_map6_frame_final.txt  TurtlebotTourCVSSP_3_quadp_cubeq_interp_poses_fscan_map6_frame_final.txt
raman_alt_1/: 1000023_2.csv  1000025_2.csv  1000027_2.csv  1000031_2.csv  1000042_2.csv  1000078_2.csv  1000150.csv  1000162.rod  1000184.txt  1000184_2.txt  Akermanite  err_time_plot.py  lab4_test.cpp  show_spectra_dyn.py  spec_0_inter_256_x7_sum_norm_baserem.csv  spec_0_inter_512.csv  spec_1_inter_512.csv  spec_2_inter_256_x7_sum_norm_baserem.csv  spec_2_inter_512.csv  spec_2_inter_512_2.csv  spec_3_inter_1024.csv  spec_3_inter_256_x7_sum_norm_baserem.csv  spec_3_inter_512.csv  spec_4_inter_1024.csv  spec_4_inter_256_x7_sum_norm_baserem.csv  spec_4_inter_512.csv  spec_4_inter_512_sum_norm.csv  spec_5_inter_1024.csv  spec_5_inter_512.csv  spec_6_inter_1024.csv  spec_6_inter_256_x7_sum_norm_baserem.csv  spec_7_inter_256_x7_sum_norm_baserem.csv  spec_7_inter_512.csv  spectra_1024.txt  spectra_512.txt  spectra_max_norm_256.txt  spectra_sum_norm_512.txt
raman_spectra/: 1000024_2.csv  1000044_2.csv  1000056_2.csv  1000061_2.csv  1000099_2.csv  1000103_2.csv  1000111_2.csv  1000162_2.csv  class_dyn_plot_spec.py  class_plotter_sub.py  gen_plots.py  interp_spec.py  plot_beam_dyn_funcs.py  spec_0_inter_1024.csv  spec_1_inter_1024.csv  spec_1_inter_256_max_norm.csv  spec_1_inter_256_x7_sum_norm_baserem.csv  spec_2_inter_1024.csv  spec_5_inter_256_x7_sum_norm_baserem.csv  spec_5_inter_512_2.csv  spec_6_inter_512.csv  spec_7_inter_1024.csv  spec_7_inter_512_max_norm.csv  spectra_max_norm_512.txt  spectra_sum_norm_256_blrm.txt
src/src/cvssp_amcl/: CMakeLists.txt  package.xml
src/src/cvssp_amcl/cfg/: AMCL.cfg
src/src/cvssp_amcl/examples/: amcl_diff.launch
src/src/cvssp_amcl/include/cvssp_amcl/map/: map.h
src/src/cvssp_amcl/include/cvssp_amcl/pf/: pf.h
src/src/cvssp_amcl/include/cvssp_amcl/sensors/: amcl_laser.h  amcl_odom.h  amcl_semantic.h  amcl_sensor.h  raman_lut.h
src/src/cvssp_amcl/launch/: Untitled-1.xml  cvssp_amcl.launch  depth_remap.launch
src/src/cvssp_amcl/src/: amcl_node.cpp  helper_functions.py  remap.py  semantic2DPlan.py  visualise_poses.py
src/src/cvssp_amcl/src/cvssp_amcl/map/: map.c  map_cspace.cpp  map_draw_opencv.cpp  map_range.c
src/src/cvssp_amcl/src/cvssp_amcl/pf/: pf.c
src/src/cvssp_amcl/src/cvssp_amcl/sensors/: amcl_laser.cpp  amcl_odom.cpp  amcl_semantic.cpp  amcl_sensor.cpp  raman_lut.cpp
src/src/cvssp_amcl/test/: basic_localization.py  set_pose.py
src/src/cvssp_rviz_plugins/: CMakeLists.txt  RaSpect.rviz  package.xml  plugin_description.xml
src/src/cvssp_rviz_plugins/icons/: RaSpectLoc.rviz
src/src/cvssp_rviz_plugins/scripts/: send_test_msgs.py
src/src/cvssp_rviz_plugins/src/: drive_widget.cpp  drive_widget.h  flag.h  imu_display.cpp  imu_display.h  imu_visual.cpp  imu_visual.h  plant_flag_tool.cpp  plant_flag_tool.h  semantic_scan_display.cpp  semantic_scan_display.h  teleop_panel.cpp  teleop_panel.h
src/src/cvssp_rviz_plugins/src/doc/: building_and_exporting.rst  conf.py  display_plugin_tutorial.rst  index.rst  panel_plugin_tutorial.rst  tool_plugin_tutorial.rst
src/src/cvssp_tools/: CMakeLists.txt  package.xml
src/src/cvssp_tools/action/: GetMap.action
(+156 files in other folders)
