<package>
    <name>cvssp_amcl</name>
    <version>1.14.0</version>
    <description>
        <p>
            cvssp_amcl is a probabilistic localization system for a robot moving in
            2D. It implements the adaptive (or KLD-sampling) Monte Carlo
            localization approach (as described by Dieter Fox), which uses a
            particle filter to track the pose of a robot against a known map.
        </p>
        <p>
            This node is derived, with thanks, from Andrew Howard's excellent
            'cvssp_amcl' Player driver.
        </p>
    </description>
    <url>http://wiki.ros.org/cvssp_amcl</url>
    <author>Oscar A. Mendez</author>
    <author>o.mendez.m@gmail.com</author>
    <maintainer email="o.mendez.m@gmail.com">Oscar Mendez</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rosbag</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>cvssp_tools</build_depend>

    <run_depend>rosbag</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>cvssp_tools</run_depend>

    <test_depend>map_server</test_depend>
</package>
